--- a/src/app/components/media-player/youtube-player/youtube-player.component.html
+++ b/src/app/components/media-player/youtube-player/youtube-player.component.html
@@ -1,64 +1,52 @@
-<div class="youtube-player-container">
-  @if (footer()) {
-  <!-- Footer mode - embedded player with controls -->
-  <div class="youtube-player-footer">
-    <div class="youtube-embed-container">
-      @if (youtubeUrl()) {
-      <iframe id="ytplayer" class="youtube-iframe" type="text/html" [src]="youtubeUrl()" frameborder="0" allowfullscreen
-        allow="autoplay" title="YouTube video player"></iframe>
-      }
+<div class="youtube-player-container" [class.footer-mode]="footer()" [class.expanded-mode]="!footer()">
+  <!-- Header (Expanded Mode Only) -->
+  <div class="youtube-header" [class.hidden]="footer()">
+    <div class="youtube-title">
+      <h2>{{ media.current()?.title || 'YouTube Video' }}</h2>
     </div>
-
-    <div class="youtube-controls">
-      <div class="control-buttons">
-        @if (media.paused) {
-        <button matTooltip="Play" (click)="media.resume()" mat-icon-button>
-          <mat-icon>play_arrow</mat-icon>
-        </button>
-        } @else {
-        <button matTooltip="Pause" (click)="media.pause()" mat-icon-button>
-          <mat-icon>pause</mat-icon>
-        </button>
-        }
-
-        <button matTooltip="View queue" routerLink="/media-queue" mat-icon-button>
-          <mat-icon>queue_music</mat-icon>
-        </button>
-      </div>
-
-      <div class="control-actions">
-        <button mat-icon-button matTooltip="Expand" (click)="toggleFullscreen()">
-          <mat-icon>open_in_full</mat-icon>
-        </button>
-        <button matTooltip="Close" (click)="media.exit()" mat-icon-button>
-          <mat-icon>close</mat-icon>
-        </button>
-      </div>
+    <div class="youtube-actions">
+      <button mat-icon-button matTooltip="Minimize" (click)="toggleFullscreen()">
+        <mat-icon>minimize</mat-icon>
+      </button>
+      <button mat-icon-button matTooltip="Close" (click)="media.exit()">
+        <mat-icon>close</mat-icon>
+      </button>
     </div>
   </div>
-  } @else {
-  <!-- Expanded mode - large YouTube player -->
-  <div class="youtube-player-expanded">
-    <div class="youtube-header">
-      <div class="youtube-title">
-        <h2>{{ media.current()?.title || 'YouTube Video' }}</h2>
-      </div>
-      <div class="youtube-actions">
-        <button mat-icon-button matTooltip="Minimize" (click)="toggleFullscreen()">
-          <mat-icon>minimize</mat-icon>
-        </button>
-        <button mat-icon-button matTooltip="Close" (click)="media.exit()">
-          <mat-icon>close</mat-icon>
-        </button>
-      </div>
+
+  <!-- Video Area (Shared) -->
+  <div class="youtube-area">
+    @if (youtubeUrl()) {
+    <iframe id="ytplayer" class="youtube-iframe" type="text/html" [src]="youtubeUrl()" frameborder="0" allowfullscreen
+      allow="autoplay" title="YouTube video player"></iframe>
+    }
+  </div>
+
+  <!-- Footer Controls (Footer Mode Only) -->
+  <div class="youtube-controls" [class.hidden]="!footer()">
+    <div class="control-buttons">
+      @if (media.paused) {
+      <button matTooltip="Play" (click)="media.resume()" mat-icon-button>
+        <mat-icon>play_arrow</mat-icon>
+      </button>
+      } @else {
+      <button matTooltip="Pause" (click)="media.pause()" mat-icon-button>
+        <mat-icon>pause</mat-icon>
+      </button>
+      }
+
+      <button matTooltip="View queue" routerLink="/media-queue" mat-icon-button>
+        <mat-icon>queue_music</mat-icon>
+      </button>
     </div>
 
-    <div class="youtube-content">
-      @if (youtubeUrl()) {
-      <iframe id="ytplayer" class="youtube-iframe-expanded" type="text/html" [src]="youtubeUrl()" frameborder="0"
-        allowfullscreen allow="autoplay" title="YouTube video player"></iframe>
-      }
+    <div class="control-actions">
+      <button mat-icon-button matTooltip="Expand" (click)="toggleFullscreen()">
+        <mat-icon>open_in_full</mat-icon>
+      </button>
+      <button matTooltip="Close" (click)="media.exit()" mat-icon-button>
+        <mat-icon>close</mat-icon>
+      </button>
     </div>
   </div>
-  }
 </div>
