--- a/src/app/components/media-player/live-stream-player/live-stream-player.component.scss
+++ b/src/app/components/media-player/live-stream-player/live-stream-player.component.scss
@@ -363,13 +363,15 @@ app-stream-info-bar {
     position: absolute;
     top: 0;
     left: 0;
-    width: 142px;
-    height: 80px;
+    width: 114px;
+    height: 64px;
     z-index: 1;
-    border-radius: 4px;
+    border-radius: 32px 0 0 32px;
 
     .livekit-content {
-      transform: scale(0.8);
+      transform: scale(0.6);
+      padding: 0;
+      gap: 0;
     }
   }
 
