--- a/src/app/pages/media-queue/media-queue.component.html
+++ b/src/app/pages/media-queue/media-queue.component.html
@@ -35,12 +35,12 @@
   <div class="media-list">
     <mat-list cdkDropList (cdkDropListDropped)="drop($event)">
       @for (item of media.media(); track item; let i = $index) {
-      <mat-list-item cdkDrag [class.current-playing]="isCurrentPlaying(item, i)" 
-        (mousemove)="onMouseMove($event, $event.currentTarget)" class="queue-item">
-        
+      <mat-list-item cdkDrag [cdkDragStartDelay]="200" [class.current-playing]="isCurrentPlaying(item, i)"
+        (mousemove)="onMouseMove($event, $event.currentTarget)" (click)="playItem(i)" class="queue-item">
+
         <div class="hover-highlight"></div>
 
-        <mat-icon matListItemIcon cdkDragHandle class="drag-handle">drag_indicator</mat-icon>
+        <mat-icon matListItemIcon class="drag-handle">drag_indicator</mat-icon>
 
         @if (hasArtwork(item)) {
         <img matListItemAvatar class="queue-artwork" [src]="utilities.sanitizeImageUrl(getArtwork(item))"
@@ -57,11 +57,11 @@
         <span matListItemLine>{{ item.artist }}</span>
         <span matListItemMeta class="queue-actions">
           @if (!isCurrentPlaying(item, i)) {
-          <button (click)="playItem(i)" mat-icon-button matTooltip="Play this item" color="primary">
+          <button (click)="playItem(i); $event.stopPropagation()" mat-icon-button matTooltip="Play this item" color="primary">
             <mat-icon>play_arrow</mat-icon>
           </button>
           }
-          <button (click)="remove(item)" mat-icon-button matTooltip="Remove from queue" color="warn">
+          <button (click)="remove(item); $event.stopPropagation()" mat-icon-button matTooltip="Remove from queue" color="warn">
             <mat-icon>delete</mat-icon>
           </button>
         </span>
