--- a/src/app/pages/media-queue/media-queue.component.scss
+++ b/src/app/pages/media-queue/media-queue.component.scss
@@ -17,13 +17,14 @@
 .queue-item {
   position: relative;
   overflow: hidden;
-  
+  cursor: pointer;
+
   // Drag handle
   .drag-handle {
     cursor: grab;
     color: var(--mat-sys-outline);
     margin-right: 8px;
-    
+
     &:active {
       cursor: grabbing;
     }
@@ -37,11 +38,9 @@
     right: 0;
     bottom: 0;
     pointer-events: none;
-    background: radial-gradient(
-      600px circle at var(--mouse-x) var(--mouse-y),
-      rgba(255, 255, 255, 0.05),
-      transparent 40%
-    );
+    background: radial-gradient(800px circle at var(--mouse-x) var(--mouse-y),
+        rgba(255, 255, 255, 0.1),
+        transparent 40%);
     opacity: 0;
     transition: opacity 0.3s;
     z-index: 1;
@@ -57,8 +56,8 @@
   box-sizing: border-box;
   border-radius: 4px;
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-              0 8px 10px 1px rgba(0, 0, 0, 0.14),
-              0 3px 14px 2px rgba(0, 0, 0, 0.12);
+    0 8px 10px 1px rgba(0, 0, 0, 0.14),
+    0 3px 14px 2px rgba(0, 0, 0, 0.12);
   background-color: var(--mat-sys-surface-container);
   list-style: none;
   padding: 0 16px;
@@ -66,13 +65,13 @@
   align-items: center;
   height: 72px;
   overflow: hidden;
-  
+
   .queue-artwork {
     width: 40px;
     height: 40px;
     margin-right: 16px;
   }
-  
+
   .drag-handle {
     margin-right: 8px;
     color: var(--mat-sys-outline);
