--- a/src/app/components/media-player/media-player.component.scss
+++ b/src/app/components/media-player/media-player.component.scss
@@ -40,6 +40,11 @@
       0px 4px 16px rgba(17, 17, 26, 0.1),
       0px 8px 24px rgba(17, 17, 26, 0.1),
       0px 16px 56px rgba(17, 17, 26, 0.1);
+
+    &.podcast-mode {
+      height: 84px;
+      border-radius: 42px;
+    }
   }
 
   :host-context(.dark) &.footer-mode {
