--- a/src/app/components/media-player/youtube-player/youtube-player.component.html
+++ b/src/app/components/media-player/youtube-player/youtube-player.component.html
@@ -22,6 +22,12 @@
     }
   </div>
 
+  <!-- Media Info (Footer Mode Only) -->
+  <div class="media-info-text" [class.hidden]="!footer()">
+    <div class="media-title">{{ media.current()?.title }}</div>
+    <div class="media-artist">{{ media.current()?.artist }}</div>
+  </div>
+
   <!-- Footer Controls (Footer Mode Only) -->
   <div class="youtube-controls" [class.hidden]="!footer()">
     <div class="control-buttons">
