--- a/src/app/components/media-player/audio-player/audio-player.component.html
+++ b/src/app/components/media-player/audio-player/audio-player.component.html
@@ -96,7 +96,8 @@
           </button>
 
           <mat-menu #moreMenu="matMenu">
-            <div class="mobile-volume-item" (click)="$event.stopPropagation()" (keydown)="$event.stopPropagation()" tabindex="0">
+            <div class="mobile-volume-item" (click)="$event.stopPropagation()" (keydown)="$event.stopPropagation()"
+              tabindex="0">
               <mat-icon>volume_up</mat-icon>
               <mat-slider class="mobile-volume-slider" [min]="0" [max]="100" [step]="1">
                 <input matSliderThumb [value]="volume" (valueChange)="onVolumeChange($event)" aria-label="Volume" />
