--- a/src/app/components/media-player/audio-player/audio-player.component.scss
+++ b/src/app/components/media-player/audio-player/audio-player.component.scss
@@ -226,12 +226,14 @@
   height: 40px !important;
   line-height: 40px !important;
   padding: 0 !important;
-  
+
   .mat-mdc-button-touch-target {
     width: 40px !important;
     height: 40px !important;
   }
-}.speed-label {
+}
+
+.speed-label {
   font-size: 11px;
   font-weight: 600;
   letter-spacing: -0.5px;
