--- a/src/app/components/media-player/audio-player/audio-player.component.html
+++ b/src/app/components/media-player/audio-player/audio-player.component.html
@@ -59,16 +59,6 @@
             <mat-icon>forward_10</mat-icon>
           </button>
           }
-
-          <button mat-icon-button [matMenuTriggerFor]="desktopMenu" matTooltip="More options">
-            <mat-icon>more_vert</mat-icon>
-          </button>
-          <mat-menu #desktopMenu="matMenu">
-            <button mat-menu-item routerLink="/media-queue">
-              <mat-icon>queue_music</mat-icon>
-              <span>Queue</span>
-            </button>
-          </mat-menu>
         </div>
 
         <!-- Mobile Controls -->
@@ -154,23 +144,26 @@
     </div>
 
     <div class="media-audio-controls">
-      @if (media.muted) {
-      <button matTooltip="Unmute" (click)="media.mute()" mat-icon-button>
-        <mat-icon>volume_off</mat-icon>
-      </button>
-      } @else {
-      <button matTooltip="Mute" (click)="media.mute()" mat-icon-button>
-        <mat-icon>volume_up</mat-icon>
-      </button>
-      }
-
-      <mat-slider class="volume-slider" [min]="0" [max]="100" [step]="1">
-        <input matSliderThumb [value]="volume" (valueChange)="onVolumeChange($event)" aria-label="Volume" />
-      </mat-slider>
-
       <button mat-icon-button matTooltip="Expand" (click)="toggleFullscreen()">
         <mat-icon>open_in_full</mat-icon>
       </button>
+
+      <button mat-icon-button [matMenuTriggerFor]="desktopMenu" matTooltip="More options">
+        <mat-icon>more_vert</mat-icon>
+      </button>
+      <mat-menu #desktopMenu="matMenu">
+        <div class="mobile-volume-item" (click)="$event.stopPropagation()" (keydown)="$event.stopPropagation()"
+          tabindex="0">
+          <mat-icon>volume_up</mat-icon>
+          <mat-slider class="mobile-volume-slider" [min]="0" [max]="100" [step]="1">
+            <input matSliderThumb [value]="volume" (valueChange)="onVolumeChange($event)" aria-label="Volume" />
+          </mat-slider>
+        </div>
+        <button mat-menu-item routerLink="/media-queue">
+          <mat-icon>queue_music</mat-icon>
+          <span>Queue</span>
+        </button>
+      </mat-menu>
 
       <button matTooltip="Close" (click)="media.exit()" mat-icon-button>
         <mat-icon>close</mat-icon>
